--- a/Albanara/WebContent/css/main.css
+++ b/Albanara/WebContent/css/main.css
@@ -7,10 +7,7 @@
 #5A8DCC*/
 
 
-.loginIdPassSumbmit {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-}
+
 
 .btn-group {
 	
@@ -20,7 +17,7 @@
 .radio_btn {
 	background-color: grey;
 	color: white;
-	width: 144px;
+	width: 100%;
 }
 
 .radio_btn:focus {
@@ -34,14 +31,14 @@
 
 
 #login_form input[type="text"], #login_form input[type="password"]{
-    width: 190px;
     padding: 8px 10px;
     margin-bottom: 10px;
+    width: 100%;
 }
 
 #login_form input[type="submit"] {
-    margin-left: 8px;
-    width: 90px;
+    margin-left: 0px;
+    width: 100%;
     height: 90px;
     padding: 8px 20px;
     background-color: #385880;
@@ -55,7 +52,6 @@
 }
 
 .sign_btn{
-	width: 141px;
 }
 
 .sign_btn:hover {
